plugins/formal-verification/testData/diagnostics/no_contracts/extension_function.kt
fun Int.<!VIPER_TEXT!>inc<!>(): Int = this + 1